--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -256,7 +256,7 @@ RecordMaxBufferedTime = 100
 # record_ttl to a large value like INT_MAX. This has the potential to cause
 # head-of-line blocking if network issues or throttling occur. You can
 # respond to such situations by using the metrics reporting functions of the
-# KPL. You may also set fail_if_thottled to true to prevent automatic retries
+# KPL. You may also set fail_if_throttled to true to prevent automatic retries
 # in case of throttling.
 #
 # Default: 30000
