--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -54,6 +54,8 @@
   		<groupId>org.slf4j</groupId>
   		<artifactId>slf4j-simple</artifactId>
   		<version>1.7.12</version>
+  		<optional>true</optional>
+  		<scope>runtime</scope>
   	</dependency>
   	<dependency>
   		<groupId>commons-io</groupId>
