--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -1,4 +1,4 @@
-# You can load a properties file with Configration.fromPropertiesFile(String)
+# You can load a properties file with KinesisProducerConfiguration.fromPropertiesFile(String)
 #
 # Any fields not found in the properties file will take on default values.
 #
