--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -1,92 +1,93 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.amazonaws</groupId>
-  <artifactId>amazon-kinesis-producer</artifactId>
-  <version>0.10.1</version>
-  <name>Amazon Kinesis Producer Library</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.amazonaws</groupId>
+    <artifactId>amazon-kinesis-producer</artifactId>
+    <version>0.10.2</version>
+    <name>Amazon Kinesis Producer Library</name>
 
-  <scm>
-    <url>https://github.com/awslabs/amazon-kinesis-producer.git</url>
-  </scm>
+    <scm>
+        <url>https://github.com/awslabs/amazon-kinesis-producer.git</url>
+    </scm>
 
-  <description>The Amazon Kinesis Producer Library for Java enables developers to easily and reliably put data into Amazon Kinesis.</description>
+    <description>The Amazon Kinesis Producer Library for Java enables developers to easily and reliably put data into Amazon Kinesis.</description>
 
-  <url>https://aws.amazon.com/kinesis</url>
+    <url>https://aws.amazon.com/kinesis</url>
 
-  <build>
-  	<plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
-        <configuration>
-          <excludePackageNames>com.amazonaws.services.kinesis.producer.protobuf</excludePackageNames>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+                <configuration>
+                    <excludePackageNames>com.amazonaws.services.kinesis.producer.protobuf</excludePackageNames>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-  <dependencies>
-  	<dependency>
-  		<groupId>com.google.guava</groupId>
-  		<artifactId>guava</artifactId>
-  		<version>18.0</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-api</artifactId>
-  		<version>1.7.12</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.protobuf</groupId>
-  		<artifactId>protobuf-java</artifactId>
-  		<version>2.6.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-simple</artifactId>
-  		<version>1.7.12</version>
-  		<optional>true</optional>
-  		<scope>runtime</scope>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-io</groupId>
-  		<artifactId>commons-io</artifactId>
-  		<version>2.4</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>commons-lang</groupId>
-  		<artifactId>commons-lang</artifactId>
-  		<version>2.6</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.amazonaws</groupId>
-  		<artifactId>aws-java-sdk-core</artifactId>
-  		<version>1.9.37</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>junit</groupId>
-  		<artifactId>junit</artifactId>
-  		<version>4.12</version>
-  		<scope>test</scope>
-  	</dependency>
-	<dependency>
-		<groupId>com.confluex</groupId>
-		<artifactId>confluex-mock-http</artifactId>
-		<version>0.4.3</version>
-		<scope>test</scope>
-	</dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.13</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.13</version>
+            <optional>true</optional>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-core</artifactId>
+            <version>1.10.34</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.confluex</groupId>
+            <artifactId>confluex-mock-http</artifactId>
+            <version>0.4.3</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-  <developers>
+    <developers>
         <developer>
             <id>amazonwebservices</id>
             <organization>Amazon Web Services</organization>
@@ -97,7 +98,7 @@
         </developer>
     </developers>
 
-     <licenses>
+    <licenses>
         <license>
             <name>Amazon Software License</name>
             <url>https://aws.amazon.com/asl</url>
