--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -109,6 +109,13 @@
             <version>0.4.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.2.22</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <developers>
