Move reporting of the statistics to their own class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,9 @@ set(SOURCE_FILES
         aws/utils/time_sensitive_queue.h
         aws/utils/token_bucket.h
         aws/utils/utils.cc
-        aws/utils/utils.h aws/kinesis/core/FlushStats.cc aws/kinesis/core/FlushStats.h)
+        aws/utils/utils.h
+        aws/utils/processing_statistics_logger.cc
+        aws/utils/processing_statistics_logger.h)
 
 
 
