Add Thread Pooling as a Threading Policy (#100)
This allows changing the threading model from a per request model to a pooled model.  

- Threading Policies
-- Pooled
This uses a queue, and thread pool to execute requests to Kinesis.  This limits the number of threads that the native process may use.  Under extremely heavy load this can increase latency significantly more than the per request model.  

-- Per Request
This is the current default for 0.12.x versions of the KPL, and creates a thread for each request to Kinesis.  Under heavy load this can create a very large number of threads, which may cause resource exhaustion.

Updated compiler for Linux from GCC 4.9 to GCC 6.3.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,21 @@
 cmake_minimum_required(VERSION 3.5)
-project(amazon_kinesis_producer_internal)
+project(amazon_kinesis_producer)
 
 set(THIRD_PARTY_LIB_DIR "${amazon_kinesis_producer_internal_SOURCE_DIR}/third_party/lib")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
-if(CMAKE_COMPILER_IS_GNUCXX)
+
+if (CMAKE_COMPILER_IS_GNUCXX)
     set(ADDL_LINK_CONFIG "-static-libstdc++")
-endif(CMAKE_COMPILER_IS_GNUCXX)
+    add_compile_options("-fpermissive")
+endif ()
+
+IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+    if (CMAKE_COMPILER_IS_GNUCXX)
+        set(ADDL_LINK_CONFIG "${ADDL_LINK_CONFIG} -static-libasan")
+    endif (CMAKE_COMPILER_IS_GNUCXX)
+ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
 set(CMAKE_EXE_LINKER_FLAGS "-L${THIRD_PARTY_LIB_DIR} ${ADDL_LINK_CONFIG}")
 
 set(SOURCE_FILES
