--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,9 @@ set(SOURCE_FILES
         aws/utils/time_sensitive_queue.h
         aws/utils/token_bucket.h
         aws/utils/utils.cc
-        aws/utils/utils.h)
+        aws/utils/utils.h
+        aws/utils/processing_statistics_logger.cc
+        aws/utils/processing_statistics_logger.h)
 
 
 
