--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -80,7 +80,7 @@ ConnectTimeout = 6000
 # connects with TLS.
 #
 # Expected pattern: ^([A-Za-z0-9-\\.]+)?$
-# CustomEndpoint = 
+# KinesisEndpoint = 
 
 # If true, throttled puts are not retried. The records that got throttled
 # will be failed immediately upon receiving the throttling error. This is
@@ -189,12 +189,12 @@ MetricsUploadDelay = 60000
 # Maximum (inclusive): 16
 MinConnections = 1
 
-# Server port to connect to. Only useful with custom_endpoint.
+# Server port to connect to. Only useful with KinesisEndpoint.
 #
 # Default: 443
 # Minimum: 1
 # Maximum (inclusive): 65535
-Port = 443
+KinesisPort = 443
 
 # Limits the maximum allowed put rate for a shard, as a percentage of the
 # backend limits.
