--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -35,8 +35,8 @@ AggregationMaxCount = 4294967295
 # time records spend buffering, look into record_max_buffered_time instead.
 #
 # If a record has more data by itself than this limit, it will bypass the
-# aggregator. Note the backend enforces a limit of 50KB on record size. If
-# you set this beyond 50KB, oversize records will be rejected at the backend.
+# aggregator. Note the backend enforces a limit of 1MB on record size. If
+# you set this beyond 1MB, oversize records will be rejected at the backend.
 #
 # Default: 51200
 # Minimum: 64
