addressed comments, updated gitignore

--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -287,3 +287,21 @@ RequestTimeout = 6000
 # Default: true
 VerifyCertificate = true
 
+# Sets the threading model that the native process will use.
+# Enum:
+# PER_REQUEST: Tells the native process to create a thread for each request.
+#              Under heavy load this can create a very large number of threads, which may cause resource exhaustion.
+#
+# POOLED: Tells the native process to use a thread pool. The size of the pool can be controlled by ThreadPoolSize
+#         This uses a queue, and thread pool to execute requests to Kinesis.
+#         This limits the number of threads that the native process may use.
+#         Under extremely heavy load this can increase latency significantly more than the per request model.
+#
+# Default = PER_REQUEST
+ThreadingModel = PER_REQUEST
+
+# Sets the maximum number of threads that the native process' thread pool will be configured with.
+#
+# Default: 0
+#ThreadPoolSize = 0
+
