--- a/java/amazon-kinesis-producer/.gitignore
+++ b/java/amazon-kinesis-producer/.gitignore
@@ -1,1 +1,22 @@
 /target/
+
+# Eclipse
+.cache*
+.classpath
+.project
+.scala_dependencies
+.settings
+.target
+.worksheet
+
+# IntelliJ
+.idea
+*.iml
+
+# ENSIME
+.ensime
+.ensime_lucene
+.ensime_cache
+
+# Mac
+.DS_Store
