Brutalize the CMake configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,21 +3,8 @@ project(amazon_kinesis_producer)
 
 set(THIRD_PARTY_LIB_DIR "${amazon_kinesis_producer_SOURCE_DIR}/third_party/lib")
 
-if (CMAKE_COMPILER_IS_GNUCXX)
-    set(ADDL_LINK_CONFIG "-static-libstdc++ -Wl,--wrap=memcpy")
-    add_compile_options("-fpermissive")
-    set(WRAP_MEMCPY aws/utils/wrap_memcpy.c)
-endif ()
-
-IF(CMAKE_BUILD_TYPE MATCHES DEBUG)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
-    if (CMAKE_COMPILER_IS_GNUCXX)
-        set(ADDL_LINK_CONFIG "${ADDL_LINK_CONFIG} -static-libasan")
-    endif (CMAKE_COMPILER_IS_GNUCXX)
-ENDIF(CMAKE_BUILD_TYPE MATCHES DEBUG)
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
-set(CMAKE_EXE_LINKER_FLAGS "-L${THIRD_PARTY_LIB_DIR} ${ADDL_LINK_CONFIG}")
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(SOURCE_FILES
         aws/auth/mutable_static_creds_provider.h
@@ -72,16 +59,7 @@ set(SOURCE_FILES
         aws/utils/utils.cc
         aws/utils/utils.h
         aws/utils/processing_statistics_logger.cc
-        aws/utils/processing_statistics_logger.h
-        ${WRAP_MEMCPY})
-
-
-
-
-if(ENABLE_SEGFAULT_TRIGGER)
-    list(APPEND LOGGING_TRIGGERS aws/utils/segfault_signal.cc)
-    add_definitions(-DSEGFAULT_SIGNAL_ENABLED)
-endif(ENABLE_SEGFAULT_TRIGGER)
+        aws/utils/processing_statistics_logger.h)
 
 set(TESTS_SOURCE
     aws/utils/test/concurrent_hash_map_test.cc
@@ -105,144 +83,38 @@ set(TESTS_SOURCE
     )
 
 
-set(THIRD_PARTY_LIBS third_party/lib)
-set(THIRD_PARTY_INCLUDE third_party/include)
-
-
-
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-if(UNIX AND NOT APPLE)
-    set(LINUX TRUE)
-endif()
 
-if(LINUX)
-    set(ADDITIONAL_LIBS idn)
-endif()
-
-include(CheckLibraryExists)
-if(LINUX)
-    check_library_exists(rt clock_gettime "" HAVE_CLOCK_GETTIME )
-    if(NOT HAVE_CLOCK_GETTIME)
-        message(FATAL_ERROR "clock_gettime not found")
-    endif(NOT HAVE_CLOCK_GETTIME)
-    set(LIBRT_LIBRARIES rt)
-    check_library_exists(dl dlopen "" HAVE_DL_OPEN)
-    if (NOT HAVE_DL_OPEN)
-        message(FATAL_ERROR "dl_open not found")
-    endif(NOT HAVE_DL_OPEN)
-    set(LIBDL_LIBRARIES dl)
-
-    add_library(libIdn STATIC IMPORTED)
-    set_property(TARGET libIdn PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libidn.a)
-    set(LIBIDN_LIBRARIES idn)
-
-
-endif(LINUX)
-
-
-if(LINUX)
-  message(STATUS "Finding uuid")
-
-  find_library(UUID_LIBRARIES uuid NAMES libuuid.a)
-
-  if("${UUID_INCLUDE_DIR}" STREQUAL "UUID_INCLUDE_DIR-NOTFOUND" OR "${UUID_LIBRARIES}" STREQUAL "UUID_LIBRARIES-NOTFOUND")
-    message(FATAL_ERROR "Could not find uuid components")
-  else()
-    message(STATUS "  Uuid library: ${UUID_LIBRARIES}")
-  endif()
-
-  add_library(libUUID STATIC IMPORTED)
-
-endif()
-
-
-set(LOGGING_TRIGGERS
-    aws/utils/signal_handler.h
-    aws/utils/signal_handler.cc
-    aws/utils/segfault_signal.h
-    aws/utils/segfault_signal.cc
-    aws/utils/backtrace/backtrace.h
-    aws/utils/writer_methods.h
-    aws/utils/writer_methods.cc
-    aws/utils/backtrace/gcc_backtrace.cc
-    aws/utils/backtrace/bsd_backtrace.cc
-    aws/utils/backtrace/null_backtrace.cc
-    )
-
-include(CheckFunctionExists)
-check_library_exists(backtrace backtrace_state "backtrace.h" HAVE_LIB_BACKTRACE)
-check_function_exists(backtrace HAVE_BACKTRACE)
-if(HAVE_LIB_BACKTRACE OR FORCE_LIB_BACKTRACE)
-    message(">>>> Using LibBacktrace")
-    add_library(libBacktrace STATIC IMPORTED)
-    set_property(TARGET libBacktrace PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libbacktrace.a)
-    set(LIBBACKTRACE_LIBRARIES backtrace)
-
-    add_definitions(-DLIB_BACKTRACE)
-elseif(HAVE_BACKTRACE)
-    message(">>>> Using Backtrace")
-    add_definitions(-DBSD_BACKTRACE)
-else()
-    message(">>>> No Backtrace Support")
-    add_definitions(-DNULL_BACKTRACE)
-endif()
-
-
-
-
-set(STATIC_LIBS
-        boost_regex
-        boost_thread
-        boost_log
-        boost_system
-        boost_random
-        boost_filesystem
-        boost_chrono)
-
+find_package(aws-sdk-cpp)
+find_package(Boost)
+find_package(Protobuf)
 find_package(Threads)
 
-add_library(LibCrypto STATIC IMPORTED)
-set_property(TARGET LibCrypto PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libcrypto.a)
-set_property(TARGET LibCrypto PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES ${LIBDL_LIBRARIES})
+set(BOOST_LIBS
+  Boost_regex_LIBRARY
+  Boost_thread_LIBRARY 
+  Boost_log_LIBRARY
+  Boost_system_LIBRARY
+  Boost_random_LIBRARY
+  Boost_filesystem_LIBRARY
+  Boost_chrono_LIBRARY)
 
-add_library(LibSsl STATIC IMPORTED)
-set_property(TARGET LibSsl PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libssl.a)
-set_property(TARGET LibSsl PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibCrypto)
+set(THIRD_PARTY_LIBS
+  ${CMAKE_THREAD_LIBS_INIT}     
+  ${BOOST_LIBS} 
+  Protobuf_LIBRARY)
 
-add_library(LibZ STATIC IMPORTED)
-set_property(TARGET LibZ PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libz.a)
+# include_directories(${Boost_INCLUDE_DIRS})
+# include_directories(${Protobuf_INCLUDE_DIR})
 
-add_library(LibCurl STATIC IMPORTED)
-set_property(TARGET LibCurl PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libcurl.a)
-set_property(TARGET LibCurl PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} ${LIBRT_LIBRARIES} ${LIBDL_LIBRARIES} LibSsl LibZ)
+add_executable(kinesis_producer ${SOURCE_FILES} aws/kinesis/main.cc)  
+target_link_libraries(kinesis_producer ${THIRD_PARTY_LIBS} aws-sdk-cpp-kinesis 
+  aws-sdk-cpp-monitoring)
 
-add_library(LibProto STATIC IMPORTED)
-set_property(TARGET LibProto PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libprotobuf.a)
-set_property(TARGET LibProto PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibZ)
+add_executable(test_driver ${SOURCE_FILES} aws/kinesis/test_driver.cc)  
+target_link_libraries(test_driver ${THIRD_PARTY_LIBS})
 
-add_library(LibAwsCore STATIC IMPORTED)
-set_property(TARGET LibAwsCore PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libaws-cpp-sdk-core.a)
-set_property(TARGET LibAwsCore PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES ${LIBRT_LIBRARIES} ${LIBIDN_LIBRARIES} LibSsl LibCurl)
+add_executable(tests ${SOURCE_FILES} ${TESTS_SOURCE} aws/kinesis/test/test.cc)  
+target_link_libraries(tests ${THIRD_PARTY_LIBS} boost_unit_test_framework)
 
-add_library(LibAwsKinesis STATIC IMPORTED)
-set_property(TARGET LibAwsKinesis PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libaws-cpp-sdk-kinesis.a)
-set_property(TARGET LibAwsKinesis PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibAwsCore)
-
-add_library(LibAwsMonitoring STATIC IMPORTED)
-set_property(TARGET LibAwsMonitoring PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libaws-cpp-sdk-monitoring.a)
-set_property(TARGET LibAwsMonitoring PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibAwsCore)
-
-
-add_executable(kinesis_producer ${SOURCE_FILES} ${LOGGING_TRIGGERS} aws/kinesis/main.cc)
-target_include_directories(kinesis_producer SYSTEM PUBLIC ${THIRD_PARTY_INCLUDE})
-target_link_libraries(kinesis_producer ${CMAKE_THREAD_LIBS_INIT} LibProto LibAwsCore LibAwsKinesis LibAwsMonitoring ${LIBBACKTRACE_LIBRARIES} ${STATIC_LIBS} ${UUID_LIBRARIES})
-
-add_executable(test_driver ${SOURCE_FILES} ${LOGGING_TRIGGERS} aws/kinesis/test_driver.cc)
-target_include_directories(test_driver SYSTEM PUBLIC ${THIRD_PARTY_INCLUDE})
-target_link_libraries(test_driver ${CMAKE_THREAD_LIBS_INIT} LibProto LibAwsCore LibAwsKinesis LibAwsMonitoring ${LIBBACKTRACE_LIBRARIES} ${STATIC_LIBS} ${UUID_LIBRARIES})
-
-add_executable(tests ${SOURCE_FILES} ${TESTS_SOURCE} ${LOGGING_TRIGGERS} aws/kinesis/test/test.cc)
-target_include_directories(tests SYSTEM PUBLIC ${THIRD_PARTY_INCLUDE})
-target_link_libraries(tests ${CMAKE_THREAD_LIBS_INIT} LibProto LibAwsCore LibAwsKinesis LibAwsMonitoring ${LIBBACKTRACE_LIBRARIES} ${STATIC_LIBS} boost_unit_test_framework ${UUID_LIBRARIES})
