--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -20,8 +20,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -116,7 +116,11 @@
             <version>2.2.22</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+        	    <groupId>javax.xml.bind</groupId>
+        	    <artifactId>jaxb-api</artifactId>
+        	    <version>2.2.12</version>
+        </dependency>
     </dependencies>
 
     <developers>
