--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -216,7 +216,7 @@ KinesisPort = 443
 # Maximum (inclusive): 9223372036854775807
 RateLimit = 150
 
-# Maximum amount of itme (milliseconds) a record may spend being buffered
+# Maximum amount of time (milliseconds) a record may spend being buffered
 # before it gets sent. Records may be sent sooner than this depending on the
 # other buffering limits.
 #
