Trying to remove the lock on credentials access
Trying a model where slots of credentials exist, and updates move
across the slots.  Mutation detection is attempted via versioning of
the credential changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ set(CMAKE_EXE_LINKER_FLAGS "-L${THIRD_PARTY_LIB_DIR} ${ADDL_LINK_CONFIG}")
 
 set(SOURCE_FILES
         aws/auth/mutable_static_creds_provider.h
+        aws/auth/mutable_static_creds_provider.cc
         aws/kinesis/core/aggregator.h
         aws/kinesis/core/attempt.h
         aws/kinesis/core/collector.h
