Ticket spin locks will now devolve to using locks after a specific number of spins (#193)
* Modified spin lock to devolve to standard lock after a set number of spins

Modified the spin lock to use something like a lock after a set number of spins.
It uses a condition variable to wake it up when its ticket is called.

* Have spin lock tests run for 2 to 128 threads.

* Reduce the number of items used in the concurrent linked queue tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SOURCE_FILES
         aws/utils/io_service_executor.h
         aws/utils/logging.cc
         aws/utils/logging.h
+        aws/utils/spin_lock.cc
         aws/utils/spin_lock.h
         aws/utils/time_sensitive.h
         aws/utils/time_sensitive_queue.h
@@ -104,8 +105,8 @@ set(TESTS_SOURCE
     aws/metrics/test/accumulator_test.cc
     aws/metrics/test/metric_test.cc
     aws/metrics/test/metrics_manager_test.cc
-    aws/auth/test/mutable_static_creds_provider_test.cc)
-
+    aws/auth/test/mutable_static_creds_provider_test.cc
+)
 
 set(THIRD_PARTY_LIBS third_party/lib)
 set(THIRD_PARTY_INCLUDE third_party/include)
