Prepare for release 0.12.9 of the Amazon Kinesis Producer Library
Added release notes.
Updated POM version to 0.12.9
Updated user agent string to 0.12.9

--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.amazonaws</groupId>
     <artifactId>amazon-kinesis-producer</artifactId>
-    <version>0.12.9-SNAPSHOT</version>
+    <version>0.12.9</version>
     <name>Amazon Kinesis Producer Library</name>
 
     <scm>
@@ -57,7 +57,7 @@
     </build>
 
     <properties>
-        <aws-sdk-core-version>1.11.245</aws-sdk-core-version>
+        <aws-sdk-core-version>1.11.312</aws-sdk-core-version>
     </properties>
 
     <dependencies>
